--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@ permalink: about/
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/custemized.png"> <a href="https://custemized.org/team">CuSTEMized</a></li>
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/github.png"> <a href="https://github.com/{{ site.author.github }}">Github</a></li>
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/linkedin.png"> <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}">Linkedin</a></li>
+<li><img class="icon" src="{{ site.baseurl }}/public/icons/orcid.png"> <a href="http://orcid.org/{{ site.author.orcid }}">ORCID</a></li>
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/scholar.png"> <a href="https://scholar.google.com/citations?user={{ site.author.scholar }}">Scholar</a></li>
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/twitter.png"> <a href="https://twitter.com/{{ site.author.twitter }}">Twitter</a></li>
 </ul>
