update profile photo

--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 permalink: about/
 ---
 
-<img class="headshot" src="{{ site.baseurl }}/public/profile_2012-06-06.jpg">
+<img class="headshot" src="{{ site.baseurl }}/public/profile_2018.jpg">
 
 <p>I am a PhD candidate in the <a href="http://projects.iq.harvard.edu/big">Bioinformatics and Integrative Genomics</a> program at <a href="http://www.harvard.edu">Harvard University</a> in <a href="http://immunogenomics.hms.harvard.edu">Soumya Raychaudhuri&#39;s lab</a>.</p>
 
