--- a/about.html
+++ b/about.html
@@ -6,22 +6,21 @@ permalink: about/
 
 <img class="headshot" src="{{ site.baseurl }}/public/profile_2018.jpg">
 
-<p>I am a PhD candidate in the <a href="http://projects.iq.harvard.edu/big">Bioinformatics and Integrative Genomics</a> program at <a href="http://www.harvard.edu">Harvard University</a> in <a href="http://immunogenomics.hms.harvard.edu">Soumya Raychaudhuri&#39;s lab</a>.</p>
+<p>Kamil Slowikowski is a PhD candidate in <a href="http://immunogenomics.hms.harvard.edu">Soumya Raychaudhuri&#39;s lab</a> at <a href="http://www.harvard.edu">Harvard University</a>. He is interested in applying functional genomics to understand gene regulation in human disease and drug response. His <a href="https://www.nature.com/articles/s41467-018-02892-y">recent publication in Nature Communications</a> used RNA-seq, flow cytometry, histology, and experimental assays to characterize a fibroblast cellular subpopulation enriched in rheumatoid arthritis joint tissue. Current work leverages RNA-seq with time series, dose response, and transcription factor knockdowns in human fibroblasts to find new regulators of inflammatory cytokine production.</p>
 
-<p>I also volunteer for <a href="https://custemized.org">CuSTEMized</a>, a 501(c)(3) nonprofit organization that encourages girls to envision themselves in scientific careers.</p>
-
-<p>Browse my profiles on the web:</p>
+<p>Web profiles:</p>
 
 <ul>
-<li><img class="icon" src="{{ site.baseurl }}/public/icons/custemized.png"> <a href="https://custemized.org/team">CuSTEMized</a></li>
-<li><img class="icon" src="{{ site.baseurl }}/public/icons/github.png"> <a href="https://github.com/{{ site.author.github }}">Github</a></li>
-<li><img class="icon" src="{{ site.baseurl }}/public/icons/linkedin.png"> <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}">Linkedin</a></li>
-<li><img class="icon" src="{{ site.baseurl }}/public/icons/orcid.png"> <a href="http://orcid.org/{{ site.author.orcid }}">ORCID</a></li>
-<li><img class="icon" src="{{ site.baseurl }}/public/icons/scholar.png"> <a href="https://scholar.google.com/citations?user={{ site.author.scholar }}">Scholar</a></li>
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/twitter.png"> <a href="https://twitter.com/{{ site.author.twitter }}">Twitter</a></li>
+<li><img class="icon" src="{{ site.baseurl }}/public/icons/github.png"> <a href="https://github.com/{{ site.author.github }}">Github</a></li>
+<li><img class="icon" src="{{ site.baseurl }}/public/icons/observable.png"> <a href="https://beta.observablehq.com/@{{ site.author.github }}">Observable</a></li>
+<li><img class="icon" src="{{ site.baseurl }}/public/icons/scholar.png"> <a href="https://scholar.google.com/citations?user={{ site.author.scholar }}">Scholar</a></li>
+<li><img class="icon" src="{{ site.baseurl }}/public/icons/orcid.png"> <a href="http://orcid.org/{{ site.author.orcid }}">ORCID</a></li>
+<li><img class="icon" src="{{ site.baseurl }}/public/icons/linkedin.png"> <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}">Linkedin</a></li>
+<li><img class="icon" src="{{ site.baseurl }}/public/icons/custemized.png"> <a href="https://custemized.org/team">CuSTEMized</a></li>
 </ul>
 
-<p>Contact me:</p>
+<p>Email:</p>
 
 <p>
 <a href="http://www.google.com/recaptcha/mailhide/d?k=01uRGuEIJVXTVwmvc0CWbj1Q==&amp;c=zMiEVNtY5r46JDspsPKsVfJYADA49iTNIMtDY2wcB3E=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01uRGuEIJVXTVwmvc0CWbj1Q\x3d\x3d\x26c\x3dzMiEVNtY5r46JDspsPKsVfJYADA49iTNIMtDY2wcB3E\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">k...</a>@gmail.com
