--- a/about.html
+++ b/about.html
@@ -4,11 +4,14 @@ title: About
 permalink: about/
 ---
 
-<img class="headshot" src="{{ site.baseurl }}/public/profile_2018.jpg">
+<img class="headshot" src="{{ site.baseurl }}/public/profile_2018.jpg" alt="Kamil Slowikowski">
 
-<p>Kamil Slowikowski is a PhD candidate in <a href="http://immunogenomics.hms.harvard.edu">Soumya Raychaudhuri&#39;s lab</a> at <a href="http://www.harvard.edu">Harvard University</a>. He is interested in applying functional genomics to understand gene regulation in human disease and drug response. His <a href="https://www.nature.com/articles/s41467-018-02892-y">recent publication in Nature Communications</a> used RNA-seq, flow cytometry, histology, and experimental assays to characterize a fibroblast cellular subpopulation enriched in rheumatoid arthritis joint tissue. Current work leverages RNA-seq with time series, dose response, and transcription factor knockdowns in human fibroblasts to find new regulators of inflammatory cytokine production.</p>
+<p>Kamil Slowikowski is a PhD candidate in <a href="http://immunogenomics.hms.harvard.edu">Soumya Raychaudhuri&#39;s lab</a> at Harvard University. He is interested in using functional genomics to understand gene regulation in the context of human disease and drug response.</p>
 
-<p>Web profiles:</p>
+<p>Email:</p>
+<p><a href="mailto:kslowikowski@gmail.com">kslowikowski@gmail.com</a></p>
+
+<p>On the web:</p>
 
 <ul>
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/twitter.png"> <a href="https://twitter.com/{{ site.author.twitter }}">Twitter</a></li>
@@ -19,10 +22,4 @@ permalink: about/
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/linkedin.png"> <a href="https://www.linkedin.com/in/{{ site.author.linkedin }}">Linkedin</a></li>
 <li><img class="icon" src="{{ site.baseurl }}/public/icons/custemized.png"> <a href="https://custemized.org/team">CuSTEMized</a></li>
 </ul>
-
-<p>Email:</p>
-
-<p>
-<a href="http://www.google.com/recaptcha/mailhide/d?k=01uRGuEIJVXTVwmvc0CWbj1Q==&amp;c=zMiEVNtY5r46JDspsPKsVfJYADA49iTNIMtDY2wcB3E=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\x3d01uRGuEIJVXTVwmvc0CWbj1Q\x3d\x3d\x26c\x3dzMiEVNtY5r46JDspsPKsVfJYADA49iTNIMtDY2wcB3E\x3d', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address">k...</a>@gmail.com
-</p>
 
