--- a/ggrepel/index.html
+++ b/ggrepel/index.html
@@ -4,12 +4,20 @@
     <title>ggrepel</title>
     <meta charset="utf-8">
     <meta name="author" content="Kamil Slowikowski @slowkow" />
-    <meta name="date" content="2018-07-19" />
+    <meta name="date" content="2018-08-08" />
     <script async defer src="https://buttons.github.io/buttons.js"></script>
     <script>
     document.addEventListener("DOMContentLoaded", function(event) { 
       document.getElementsByTagName('video')[0].play();
     });
+    </script>
+    <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+    ga('create', 'UA-15531613-2', 'auto');
+    ga('send', 'pageview');
     </script>
     <link rel="stylesheet" href="theme.css" type="text/css" />
   </head>
@@ -23,14 +31,13 @@ class: title-slide-custom, center
 
 # Introduction to **ggrepel**
 
-.larger[
-July 2018
+.large[
 
-&lt;img src="index_files/logo.svg" width="120px"&gt;&lt;/img&gt;
+&lt;img src="index_files/logo.svg" width="181px"&gt;&lt;/img&gt;
 
 [github.com/slowkow/ggrepel](https://github.com/slowkow/ggrepel)
 
-&lt;a class="github-button" href="https://github.com/slowkow/ggrepel" data-size="large" data-show-count="true" aria-label="Star slowkow/ggrepel on GitHub"&gt;Star&lt;/a&gt;
+July 2018
 
 Kamil Slowikowski &lt;br&gt; [@slowkow](https://twitter.com/slowkow)
 ]
