change http to https

--- a/static/notes/geneinfo.html
+++ b/static/notes/geneinfo.html
@@ -163,7 +163,7 @@ var posToRegion = function(pos) {
 
 var entrezGeneLink = function(datum) {
     var form = 'Entrez: ' +
-        '<a target="_blank" href="http://www.ncbi.nlm.nih.gov/gene/{entrezgene}">' +
+        '<a target="_blank" href="https://www.ncbi.nlm.nih.gov/gene/{entrezgene}">' +
         '{entrezgene}</a>';
     if (datum.entrezgene) {
         return format(form, datum);
@@ -173,7 +173,7 @@ var entrezGeneLink = function(datum) {
 
 var proteinAtlasLink = function(datum) {
   var form = 'Human Protein Atlas: ' +
-    '<a target="_blank" href="http://www.proteinatlas.org/' +
+    '<a target="_blank" href="https://www.proteinatlas.org/' +
     datum.ensembl.gene + '">' +
     datum.ensembl.gene + '</a>';
   if (datum.ensembl.gene) {
@@ -184,7 +184,7 @@ var proteinAtlasLink = function(datum) {
 
 var hgncGeneLink = function(datum) {
     var form = 'HGNC: ' +
-        '<a target="_blank" href="http://www.genenames.org/cgi-bin/gene_symbol_report' +
+        '<a target="_blank" href="https://www.genenames.org/cgi-bin/gene_symbol_report' +
         '?hgnc_id=HGNC:{HGNC}">{HGNC}</a>';
     if (datum.HGNC) {
         return format(form, datum);
@@ -193,7 +193,7 @@ var hgncGeneLink = function(datum) {
 };
 
 var jbrowseRegionLink = function (pos) {
-    var url = 'http://www.broadinstitute.org/~slowikow/JBrowse-1.10.1/' +
+    var url = 'https://www.broadinstitute.org/~slowikow/JBrowse-1.10.1/' +
         '?loc={chr}%3A{start}..{end}' +
         '&tracks=Adipose%20-%20Subcutaneous%2CWhole%20Blood' +
         '%2CArtery%20-%20Aorta%2CMuscle%20-%20Skeletal' +
@@ -221,7 +221,7 @@ var ucscRegionLink = function (pos) {
 
 var gtexRegionLink = function (pos) {
     var form = 'GTEx: ' +
-        'http://epigenomegateway.wustl.edu/browser/' +
+        'https://epigenomegateway.wustl.edu/browser/' +
         '?genome=hg19&coordinate=chr7:26663835-28123541';
 };
 
@@ -238,7 +238,7 @@ var formatSuggestion = function (datum) {
     var form = '<div><strong>{symbol}</strong>' +
         ' <span style="font-size:80%">' + space + region + space + hgncGeneLink(datum) + '</span>' +
         '<br>{name}</div>';
-    //' Entrez: <a target="_blank" href="http://www.ncbi.nlm.nih.gov/gene/{entrezgene}">{entrezgene}</a>' +
+    //' Entrez: <a target="_blank" href="https://www.ncbi.nlm.nih.gov/gene/{entrezgene}">{entrezgene}</a>' +
     return format(form, datum);
 };
 
@@ -264,7 +264,7 @@ var engine = new Bloodhound({
     name: 'genes',
     limit: 15,
     remote: {
-        url: 'http://mygene.info/v2/query?q=%QUERY*' +
+        url: 'https://mygene.info/v2/query?q=%QUERY*' +
             '&fields=symbol,name,entrezgene,ensembl,summary,genomic_pos_hg19,HGNC' +
             '&species=human&size=15' +
             '&email=slowikow@broadinstitute.org',
